--- a/src/i18n/locales/pt/translation.json
+++ b/src/i18n/locales/pt/translation.json
@@ -18,8 +18,61 @@
   "Compartilhe todas as suas experiências com o HAPPDINE!": "Compartilhe todas as suas experiências com o HAPPDINE!",
   "Cardápio": "Cardápio",
   "Monitoramento Rápido": "Monitoramento Rápido",
-  "Sobre nós": "Sobre nós",
-  "Gráficos": "Gráficos",
-  "Entretenimento": "Entretenimento",
-  "© Robert Bosch GmbH 2024, all rights reserved": "© Robert Bosch GmbH 2024, todos os direitos reservados"
+  "© Robert Bosch GmbH 2024, all rights reserved": "© Robert Bosch GmbH 2024, todos os direitos reservados",
+  "Anterior": "◀",
+  "Próximo": "▶",
+  "Domingo": "DOM",
+  "Segunda-feira": "SEG",
+  "Terça-feira": "TER",
+  "Quarta-feira": "QUA",
+  "Quinta-feira": "QUI",
+  "Sexta-feira": "SEX",
+  "Sábado": "SAB",
+  "QUERIDINHO_DO_DIA": "Queridinho do Dia",
+  "SELECIONE_SEU_CARDAPIO_FAVORITO": "Selecione o seu cardápio favorito",
+  "QUAL_CARDAPIO_TE_AGRADOU_MAIS": "Qual cardápio te agradou mais?",
+  "ERRO_AO_CARREGAR_RESTAURANTES": "Erro ao carregar os restaurantes.",
+  "VOTO_ENVIADO_COM_SUCESSO": "Voto enviado com sucesso!",
+  "DESEJA_RECEBER_CARDAPIO_EMAIL": "Deseja receber o cardápio diretamente no seu Email?",
+  "NOME": "Nome",
+  "EMAIL": "E-mail",
+  "ENVIAR": "Enviar",
+  "MODA_DA_CASA": "Moda da Casa",
+  "DATA_EXEMPLO": "Terça-Feira, dia 21 de Agosto de 2024",
+  "DOMINGO": "Domingo",
+  "SEGUNDA": "Segunda",
+  "TERCA": "Terça",
+  "QUARTA": "Quarta",
+  "QUINTA": "Quinta",
+  "SABADO": "Sábado",
+  "SEXTA": "Sexta",
+  "QUEM_SOMOS": "QUEM SOMOS?",
+  "FOTO_EQUIPE_ALT": "Foto da equipe do HappDine",
+  "HAPPDINE_DESCRICAO_1": "O HAPPDINE iniciou com uma ideia proposta em janeiro de 2024 na 6ª edição do HACKATHON, evento interno de sete dias realizado pela CaP/ETS (Engineering Technical School), onde recebeu a premiação de primeiro lugar.",
+  "HAPPDINE_DESCRICAO_2": "Formados por integrantes de Digital Solutions das turmas 08, 09 e 10, o HAPPDINE é composto por 7 desenvolvedores: Adailton da Silva Filho, Ana Beatriz Nardy Torrecilas, Isabela Pereira Leite, Isabela Rocha dos Santos, João Vitor de Souza Goulart, Murilo Silva dos Santos e Sara de Oliveira Fernandes.",
+  "VALORES": "Valores",
+  "QUE_DEFINEM": "que definem o",
+  "HAPPDINE": "HAPPDINE",
+  "CONHECA_INTEGRANTES": "Conheça os integrantes da equipe HAPPDINE",
+  "#EQUIPE": "#EQUIPE",
+  "EFICIENTE": "EFICIENTE",
+  "TECNOLÓGICO": "TECNOLÓGICO",
+  "RÁPIDO": "RÁPIDO",
+  "Clique na modalidade e confira o cardápio!":"Clique na modalidade e confira o cardápio!",
+  "CARNE_ASSADA_AO_VINHO": "Carne assada ao vinho",
+  "DE_BEM_COM_A_VIDA": "De Bem com a Vida",
+  "PRATO_1": "Carne assada ao vinho",
+  "PRATO_2": "Carne assada ao vinho",
+  "PRATO_3": "Carne assada ao vinho",
+  "PRATO_4": "Carne assada ao vinho",
+  "PRATO_5": "Carne assada ao vinho",
+  "PRATO_6": "Carne assada ao vinho",
+  "PRATO_7": "Carne assada ao vinho",
+  "PRATO_8": "Carne assada ao vinho",
+  "Por meio dos seus pratos prediletos":"Por meio dos seus pratos prediletos",
+  "descubra a fila que mais combina com você!":"descubra a fila que mais combina com você!",
+  "Desvie dos obstáculos e se divirta":"Desvie dos obstáculos e se divirta",
+  "com o FLAPPYCHICKEN":"com o FLAPPYCHICKEN",
+  "INICIAR":"INICIAR",
+  "ENTRETENIMENTO":"ENTRETENIMENTO"
 }
