--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -18,8 +18,62 @@
   "Compartilhe todas as suas experiências com o HAPPDINE!": "Share all your experiences with HAPPDINE!",
   "Cardápio": "Menu",
   "Monitoramento Rápido": "Quick Monitoring",
-  "Sobre nós": "About Us",
-  "Gráficos": "Graphics",
-  "Entretenimento": "Entertainment",
-  "© Robert Bosch GmbH 2024, all rights reserved": "© Robert Bosch GmbH 2024, all rights reserved"
+  "© Robert Bosch GmbH 2024, all rights reserved": "© Robert Bosch GmbH 2024, all rights reserved",
+  "Anterior": "◀",
+  "Próximo": "▶",
+  "Domingo": "SUN",
+  "Segunda-feira": "MON",
+  "Terça-feira": "TUE",
+  "Quarta-feira": "WED",
+  "Quinta-feira": "THU",
+  "Sexta-feira": "FRI",
+  "Sábado": "SAT",
+  "QUERIDINHO_DO_DIA": "Dish of the Day",
+  "SELECIONE_SEU_CARDAPIO_FAVORITO": "Select your favorite menu",
+  "QUAL_CARDAPIO_TE_AGRADOU_MAIS": "Which menu did you like the most?",
+  "ERRO_AO_CARREGAR_RESTAURANTES": "Error loading restaurants.",
+  "VOTO_ENVIADO_COM_SUCESSO": "Vote sent successfully!",
+  "DESEJA_RECEBER_CARDAPIO_EMAIL": "Do you want to receive the menu directly in your Email?",
+  "NOME": "Name",
+  "EMAIL": "Email",
+  "ENVIAR": "Send",
+  "MODA_DA_CASA": "Fashion of Home",
+  "DATA_EXEMPLO": "Tuesday, August 21, 2024",
+  "DOMINGO": "Sunday",
+  "SEGUNDA": "Monday",
+  "TERCA": "Tuesday",
+  "QUARTA": "Wednesday",
+  "QUINTA": "Thursday",
+  "SABADO": "Saturday",
+  "SEXTA": "Friday",
+  "QUEM_SOMOS": "WHO WE ARE?",
+  "FOTO_EQUIPE_ALT": "Photo of the HappDine team",
+  "HAPPDINE_DESCRICAO_1": "HAPPDINE started with an idea proposed in January 2024 at the 6th edition of the HACKATHON, an internal seven-day event held by CaP/ETS (Engineering Technical School), where it received the first-place award.",
+  "HAPPDINE_DESCRICAO_2": "Composed of members from Digital Solutions from classes 08, 09, and 10, HAPPDINE consists of 7 developers: Adailton da Silva Filho, Ana Beatriz Nardy Torrecilas, Isabela Pereira Leite, Isabela Rocha dos Santos, João Vitor de Souza Goulart, Murilo Silva dos Santos, and Sara de Oliveira Fernandes.",
+  "VALORES": "Values",
+  "QUE_DEFINEM": "that define",
+  "HAPPDINE": "HAPPDINE",
+  "CONHECA_INTEGRANTES": "Meet the members of the HAPPDINE team",
+  "#EQUIPE": "#TEAM",
+  "EFICIENTE": "EFFICIENT",
+  "TECNOLÓGICO": "TECHNOLOGICAL",
+  "RÁPIDO": "FAST",
+  "Clique na modalidade e confira o cardápio!":" Click on the option and check the menu!",
+  "CARNE_ASSADA_AO_VINHO": "Roast Beef",
+  "DE_BEM_COM_A_VIDA": "Feeling Good",
+  "PRATO_1": "Roast Beef in Wine",
+  "PRATO_2": "Roast Beef in Wine",
+  "PRATO_3": "Roast Beef in Wine",
+  "PRATO_4": "Roast Beef in Wine",
+  "PRATO_5": "Roast Beef in Wine",
+  "PRATO_6": "Roast Beef in Wine",
+  "PRATO_7": "Roast Beef in Wine",
+  "PRATO_8": "Roast Beef in Wine",
+  "Por meio dos seus pratos prediletos": "Through your favorite dishes",
+  "descubra a fila que mais combina com você!": "discover the queue that suits you best!",
+  "Desvie dos obstáculos e se divirta": "Dodge the obstacles and have fun",
+  "com o FLAPPYCHICKEN": "with FLAPPYCHICKEN",
+  "INICIAR": "START",
+  "ENTRETENIMENTO":"ENTERTAINMENT"
+
 }
