--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -18,8 +18,61 @@
   "Compartilhe todas as suas experiências com o HAPPDINE!": "¡Comparte todas tus experiencias con HAPPDINE!",
   "Cardápio": "Menú",
   "Monitoramento Rápido": "Monitoreo Rápido",
-  "Sobre nós": "Sobre Nosotros",
-  "Gráficos": "Gráficos",
-  "Entretenimento": "Entretenimiento",
-  "© Robert Bosch GmbH 2024, all rights reserved": "© Robert Bosch GmbH 2024, todos los derechos reservados"
+  "© Robert Bosch GmbH 2024, all rights reserved": "© Robert Bosch GmbH 2024, todos los derechos reservados",
+  "Anterior": "◀",
+  "Próximo": "▶",
+  "Domingo": "DOM",
+  "Segunda-feira": "LUN",
+  "Terça-feira": "MAR",
+  "Quarta-feira": "MIÉ",
+  "Quinta-feira": "JUE",
+  "Sexta-feira": "VIE",
+  "Sábado": "SÁB",
+  "QUERIDINHO_DO_DIA": "Plato del Día",
+  "SELECIONE_SEU_CARDAPIO_FAVORITO": "Seleccione su menú favorito",
+  "QUAL_CARDAPIO_TE_AGRADOU_MAIS": "¿Qué menú te gustó más?",
+  "ERRO_AO_CARREGAR_RESTAURANTES": "Error al cargar restaurantes.",
+  "VOTO_ENVIADO_COM_SUCESSO": "¡Voto enviado con éxito!",
+  "DESEJA_RECEBER_CARDAPIO_EMAIL": "¿Desea recibir el menú directamente en su correo electrónico?",
+  "NOME": "Nombre",
+  "EMAIL": "Correo electrónico",
+  "ENVIAR": "Enviar",
+  "MODA_DA_CASA": "Moda de Casa",
+  "DATA_EXEMPLO": "Martes, 21 de Agosto de 2024",
+  "DOMINGO": "Domingo",
+  "SEGUNDA": "Lunes",
+  "TERCA": "Martes",
+  "QUARTA": "Miércoles",
+  "QUINTA": "Jueves",
+  "SABADO": "Sábado",
+  "SEXTA": "Viernes",
+  "QUEM_SOMOS": "¿QUIÉNES SOMOS?",
+  "FOTO_EQUIPE_ALT": "Foto del equipo de HappDine",
+  "HAPPDINE_DESCRICAO_1": "HAPPDINE comenzó con una idea propuesta en enero de 2024 en la 6ª edición del HACKATHON, un evento interno de siete días realizado por CaP/ETS (Escuela Técnica de Ingeniería), donde recibió el primer premio.",
+  "HAPPDINE_DESCRICAO_2": "Compuesto por miembros de Digital Solutions de las clases 08, 09 y 10, HAPPDINE está formado por 7 desarrolladores: Adailton da Silva Filho, Ana Beatriz Nardy Torrecilas, Isabela Pereira Leite, Isabela Rocha dos Santos, João Vitor de Souza Goulart, Murilo Silva dos Santos y Sara de Oliveira Fernandes.",
+  "VALORES": "Valores",
+  "QUE_DEFINEM": "que definen",
+  "HAPPDINE": "HAPPDINE",
+  "CONHECA_INTEGRANTES": "Conoce a los integrantes del equipo HAPPDINE",
+  "#EQUIPE": "#EQUIPO",
+  "EFICIENTE": "EFICIENTE",
+  "TECNOLÓGICO": "TECNOLÓGICO",
+  "RÁPIDO": "RÁPIDO",
+  "Clique na modalidade e confira o cardápio!":"¡Haz clic en la modalidad y consulta el menú!",
+  "CARNE_ASSADA_AO_VINHO": "Carne Asada",
+  "DE_BEM_COM_A_VIDA": "De Bien con la Vida",
+  "PRATO_1": "Carne Asada al Vino",
+  "PRATO_2": "Carne Asada al Vino",
+  "PRATO_3": "Carne Asada al Vino",
+  "PRATO_4": "Carne Asada al Vino",
+  "PRATO_5": "Carne Asada al Vino",
+  "PRATO_6": "Carne Asada al Vino",
+  "PRATO_7": "Carne Asada al Vino",
+  "PRATO_8": "Carne Asada al Vino",
+  "Por meio dos seus pratos prediletos": "A través de tus platos favoritos",
+  "descubra a fila que mais combina com você!": "descubre la fila que mejor se adapta a ti!",
+  "Desvie dos obstáculos e se divirta": "Esquiva los obstáculos y diviértete",
+  "com o FLAPPYCHICKEN": "con el FLAPPYCHICKEN",
+  "INICIAR": "INICIAR",
+  "ENTRETENIMENTO":"ENTRETENIMIENTO"
 }
